# python_web_ex4

./: .env.example  .gitignore  Dockerfile  pyproject.toml
ex_4/: main.py  routes.py
ex_4/controllers/: MainController.py
ex_4/core/: router.py  server.py  soketServer.py  storage.py
ex_4/frontend/: .babelrc  package-lock.json  package.json  postcss.config.js  webpack.config.js
ex_4/frontend/components/: footer.html  header.html  menu.html
ex_4/frontend/layouts/: base.html
ex_4/frontend/src/: index.js
ex_4/frontend/src/scss/: _base.scss  _mixins.scss  _typography.scss  _variables.scss  main.scss
ex_4/frontend/src/scss/blocks/: _footer.scss  _form.scss  _header.scss  _logo.scss  _menu.scss
ex_4/frontend/templates/: error404.html  index.html  message.html
ex_4/storage/: data.json  storage.py
ex_4/templates/: index.html  message.html
ex_4/templates/layouts/: base.html
